--- a/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
@@ -30,12 +30,9 @@
                     <div class="uk-offcanvas-bar  ">
                         <button class="uk-offcanvas-close" type="button" uk-close=""/>
                         <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-large-top">
-                            <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="/alumno/dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="40" alt=""/></h:link></li>
-                            <li uk-tooltip="title: #{alumno['activity']}; pos: right" ><h:link outcome="/alumno/activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="40" alt="" /></h:link></li>
-                            <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="/alumno/glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="40" alt="" /></h:link></li>
-                            <li uk-tooltip="title: Indefinido; pos: right"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="40" alt="" /></li>
-                            <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="/alumno/select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="40" height="" alt="" /></h:link></li>
-                            <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="/alumno/free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="40" alt="" /></h:link></li>
+                            <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="40" alt=""/></h:link></li>
+                            <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="mapametal"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="40" height="" alt="" /></h:link></li>
+                            <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="40" alt="" /></h:link></li>
                         </ul>
 
                     </div>
@@ -47,7 +44,7 @@
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
             <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
-            <h6 class="uk-text-center uk-margin-remove-vertical text-light">#{alumnoControlador.alumnoModelo.apodo} </h6>
+            <h6 class="uk-text-center uk-margin-remove-vertical text-light nombre-usuario">#{alumnoControlador.alumnoModelo.apodo} </h6>
 
             <div class="uk-position-relative uk-text-center uk-display-block">
                 <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center uk-text-capitalize" data-uk-icon="icon: triangle-down; ratio: 0.7">#{etiqueta['menu']}</a>
@@ -63,22 +60,16 @@
         </div>
         <div class="left-nav-wrap  uk-visible@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
-                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="/alumno/dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
-                <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="/alumno/activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="/alumno/glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:graphicImage library="img" name="/alumno/planetas/planeta3.svg"  width="80" alt="" /></li>
-                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="/alumno/select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
-                <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="/alumno/free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="mapametal"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
             </ul>
         </div>
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
-                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="/alumno/dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="60" alt=""/></h:link></li>
-                <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="/alumno/activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="60" alt="" /></h:link></li>
-                <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="/alumno/glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="60" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:graphicImage library="img" name="/alumno/planetas/planeta3.svg"  width="60" alt="" /></li>
-                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="/alumno/select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="60" height="" alt="" /></h:link></li>
-                <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="/alumno/free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="60" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="60" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="mapametal"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="60" height="" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="60" alt="" /></h:link></li>
             </ul>
         </div>
     </ui:define>
@@ -105,18 +96,18 @@
                     <h:form id="formulario-mapa-mental" class="uk-form-stacked">
                         <div class="uk-child-width-1-1@s area-texto2 uk-padding-remove " uk-grid="">
                             <div class="tam-contenedor uk-margin-auto">
-                                <h:outputLabel for="uno" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"/>
+                                <h:outputLabel for="uno" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="uno"
-                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
                                 <h:message for="uno" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
-                                <h:outputLabel for="dos" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"/>
+                                <h:outputLabel for="dos" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="dos"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
@@ -127,44 +118,44 @@
                                 <h:message for="dos" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
-                                <h:outputLabel for="tres" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"/>
+                                <h:outputLabel for="tres" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="tres"
-                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
+                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
                                 <h:message for="tres" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
-                                <h:outputLabel for="cuatro" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"/>
+                                <h:outputLabel for="cuatro" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="cuatro"
-                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}">
+                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
                                 <h:message for="cuatro" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
-                                <h:outputLabel for="cinco" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"/>
+                                <h:outputLabel for="cinco" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="cinco"
-                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}">
+                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
                                 <h:message for="cinco" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
-                                <h:outputLabel for="seis" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"/>
+                                <h:outputLabel for="seis" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="seis"
-                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}">
+                                                     disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
