estilos a mapa mental de pescado

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -127,8 +127,9 @@
                                      value="#{boton['submit']}"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"
-                                     styleClass="boton-enviar boton-gral6"/>
+                                     styleClass="boton-enviar boton-grales"/>
                 </h:form>
+
                 <h:form id="formulario-mapa-mental-movil">
                     <div class="uk-hidden@s caja-pez">
                         <h:inputTextarea id="texto-respuesta-movil1"
