moviendo el boton enviar en la vistas

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -180,6 +180,11 @@
                                                  action="#{mapaMentalControlador.respondeMapaMental}"
                                                  styleClass="boton-enviar"/>
                             </div>
+                            <h:commandButton id="boton-enviar-mapa-mental-movil"
+                                             value="#{boton['submit']}"
+                                             rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             action="#{mapaMentalControlador.respondeMapaMental}"
+                                             styleClass="boton-enviar"/>
                         </h:form>
                     </div>
                     <div class="cuadro-padre2 ">
