ya se acomodaron la mayoria de los botones enviar en los mapas mentales

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -191,7 +191,7 @@
                                          value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          action="#{mapaMentalControlador.respondeMapaMental}"
-                                         styleClass="boton-enviar"/>
+                                         styleClass="boton-enviar boton-gral9"/>
                     </h:form>
                 </div>
             </div>
