--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -174,17 +174,12 @@
                                     </h:inputText>
                                     <h:message for="diezd" styleClass=""/>
                                 </div>
-                                <h:commandButton id="boton-enviar-mapa-mental-movil"
-                                                 value="#{boton['submit']}"
-                                                 rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                 action="#{mapaMentalControlador.respondeMapaMental}"
-                                                 styleClass="boton-enviar"/>
                             </div>
                             <h:commandButton id="boton-enviar-mapa-mental-movil"
                                              value="#{boton['submit']}"
                                              rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                              action="#{mapaMentalControlador.respondeMapaMental}"
-                                             styleClass="boton-enviar"/>
+                                             styleClass="boton-enviar boton-gral7"/>
                         </h:form>
                     </div>
                     <div class="cuadro-padre2 ">
