--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -120,88 +120,77 @@
                          </div>
                      </div>
                  </h:panelGroup>
-
                 <h1 class="lescuadron letra-titulo uk-text-center uk-margin-large-top">#{alumno['dashboard.homework.done']}</h1>
-
-
-                <div >
-                    <ul class="uk-dotnav uk-flex uk-flex-center" uk-switcher="">
-                            <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades" varStatus="contador">
-                                <li ><a href="#">Actividad #{contador.index + 1}</a></li>
-                            </ui:repeat>
-                    </ul>
-
-                    <ul class="uk-switcher uk-margin">
-                        <ui:repeat value="#{tareasProgresoControlador.tareaActividadModeloLista}" var="actividades" varStatus="contador">
-                            #{tareasProgresoControlador.llenaTareas(actividades.id)}
-                            <li class="uk-margin-medium-left">
-                                <h:panelGroup  styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
-                                    <div class="imagen-flexible">
-                                        <h:graphicImage styleClass="img-alumno-dashboard uk-display-block uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
-                                       <div class="contenedor-barra">
-                                           <span>0%</span>
-                                           <progress class="uk-progress color1" value="#{tareasProgresoControlador.tareaResuetasModeloLista[0].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[0].total}"/>
-                                           <span>100%</span>
-                                       </div>
+                <div>
+                    <h:form>
+                        <h:selectOneRadio value="#{tareasProgresoControlador.idTarea}">
+                            <f:selectItems value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActividad" itemLabel="#{tareaActividad.idActividad}" itemValue="#{tareaActividad.id}"/>
+                            <f:ajax event="change" listener="#{tareasProgresoControlador.buscaTareasRealizadas}" execute="@form" render="tareas"/>
+                        </h:selectOneRadio>
+                    </h:form>
+                    <ul>
+                        <li class="uk-margin-medium-left">
+                            <h:panelGroup id="tareas" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
+                                <div class="imagen-flexible">
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-display-block uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
+                                   <div class="contenedor-barra">
+                                       <span>0%</span>
+                                       <progress class="uk-progress color1" value="#{tareasProgresoControlador.tareaResuetasModeloLista[0].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[0].total}"/>
+                                       <span>100%</span>
+                                   </div>
+                                </div>
+                                <div class="imagen-flexible">
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[1].tarea}; pos: right "  />
+                                    <div class="contenedor-barra">
+                                        <span>0%</span>
+                                        <progress class="uk-progress color2" value="#{tareasProgresoControlador.tareaResuetasModeloLista[1].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[1].total}"/>
+                                        <span>100%</span>
                                     </div>
+                                </div>
+                                <div class="imagen-flexible">
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[2].tarea}; pos: right "  />
+                                    <div class="contenedor-barra">
+                                        <span>0%</span>
+                                        <progress class="uk-progress color3" value="#{tareasProgresoControlador.tareaResuetasModeloLista[2].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[2].total}"/>
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                            </h:panelGroup>
+                            <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="">
+                                <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
                                     <div class="imagen-flexible">
-                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[1].tarea}; pos: right "  />
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[3].tarea}; pos: right "/>
                                         <div class="contenedor-barra">
                                             <span>0%</span>
-                                            <progress class="uk-progress color2" value="#{tareasProgresoControlador.tareaResuetasModeloLista[1].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[1].total}"/>
+                                            <progress class="uk-progress color4" value="#{tareasProgresoControlador.tareaResuetasModeloLista[3].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[3].total}"/>
                                             <span>100%</span>
                                         </div>
                                     </div>
-
+                                </div>
+                                <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
                                     <div class="imagen-flexible">
-                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[2].tarea}; pos: right "  />
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[4].tarea}; pos: right "/>
                                         <div class="contenedor-barra">
                                             <span>0%</span>
-                                            <progress class="uk-progress color3" value="#{tareasProgresoControlador.tareaResuetasModeloLista[2].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[2].total}"/>
+                                            <progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[4].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[4].total}"/>
                                             <span>100%</span>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="fondo-comic6 " style="border: 6px solid white; padding: 20px 0;">
 
-                                </h:panelGroup>
-                                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="">
-                                    <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
-                                        <div class="imagen-flexible">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[3].tarea}; pos: right "/>
-                                            <div class="contenedor-barra">
-                                                <span>0%</span>
-                                                <progress class="uk-progress color4" value="#{tareasProgresoControlador.tareaResuetasModeloLista[3].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[3].total}"/>
-                                                <span>100%</span>
-                                            </div>
+                                    <div class="imagen-flexible">
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/naranja.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[5].tarea}; pos: right "/>
+                                        <div class="contenedor-barra">
+                                            <span>0%</span>
+                                            <progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[5].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[5].total}"/>
+                                            <span>100%</span>
                                         </div>
                                     </div>
-                                    <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
-                                        <div class="imagen-flexible">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[4].tarea}; pos: right "/>
-                                            <div class="contenedor-barra">
-                                                <span>0%</span>
-                                                <progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[4].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[4].total}"/>
-                                                <span>100%</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="fondo-comic6 " style="border: 6px solid white; padding: 20px 0;">
-
-                                        <div class="imagen-flexible">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/naranja.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[5].tarea}; pos: right "/>
-                                            <div class="contenedor-barra">
-                                                <span>0%</span>
-                                                <progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[5].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[5].total}"/>
-                                                <span>100%</span>
-                                            </div>
-                                        </div>
-
-                                    </div>
-
-                                </h:panelGroup>
-                            </li>
-                        </ui:repeat>
+                                </div>
+                            </h:panelGroup>
+                        </li>
                     </ul>
-
                 </div>
             </div>
         </div>
